# ComfyUI-F5-TTS-TH

./: .gitmodules  ARPABET2ThaiScript.py  F5TTS.py  F5TTS_Advance.py  F5TTS_Advance.py.bak  FairyTaleNarratorSwitcher.py  Install.py  LICENSE  README.md  README.md.bak  __init__.py  check_new_models.py  exceptions.csv  fix-submodule-custom-manager-install.md  install.py  manifest.json  pyproject.toml  requirements.txt  save_audio_text_node.py
.github/workflows/: publish.yml
example_workflows/: F5-TTS-Advance TH-workflow.json  F5-TTS-TH-MultiSpeaker.json  boy_slow1.txt  dragonbal1.txt  dragonbal2.txt  dragonbal3.txt  mali.txt  mono_24000.txt  muti-speakers (1).json  slow.txt  tect2ThaiSpeech.json  test_waveform_2d.py  text2speech-thai-simple-workflow.json
src/: convert_number_to_thai.py
