[project]
name = "ComfyUI-F5-TTS-TH"
description = "Text to speech สำหรับ ภาษาไทย บน ComfyUI"
version = "1.0.0a1"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/gordon123/ComfyUI-F5-TTS-TH"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "iimate24"
DisplayName = "ComfyUI-F5-TTS-TH"
Icon = "icon_F5_TTS_TH.ico"

